--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@wdio/local-runner": "^8.0.15",
         "@wdio/spec-reporter": "^8.0.14",
         "dotenv": "^16.0.3",
+        "faker": "^5.1.0",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4",
         "wdio-chromedriver-service": "^8.0.1"
